# pheromone_simulation

./: Cargo.toml  README.adoc  README.md  settings.toml
src/: compute.wgsl  main.rs  render.wgsl
