[package]
name = "pheromone_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
wgpu = "0.15.1"
winit = "0.28.1"
toml = "0.7.2"
rand = "0.8.5"
anyhow = "1.0.66"
pollster = "0.3.0"

[dependencies.bytemuck]
version = "1.13.0"
features = ["derive"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
