[package]
name = "pheromone_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.3"
winit = "0.29.15"
toml = "0.8.12"
rand = "0.8.5"
anyhow = "1.0.81"
pollster = "0.3.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
